--- a/Models/Speech_LLM/2024.07.11_MELLE.md
+++ b/Models/Speech_LLM/2024.07.11_MELLE.md
@@ -97,7 +97,7 @@
 > The sampling strategy is a critical component in both text generation and speech synthesis systems, as it introduces diversity into the output and enhances the generalization ability.
 > However, continuous-valued tokens based models can not employ top-p random sampling method used in discrete codec language models.
 >
-> In this work, we propose a continuous mel-spectrogram\footnote{We leave the exploration of other continuous representations, such as VAE latent hidden states, for future research endeavors.} based autoregressive language model (called ***MELLE***) for text-to-speech synthesis, as illustrated in Figure \ref{fig:overview}. ***MELLE*** is a robust single-pass zero-shot TTS model which autoregressively predicts mel-spectrogram frames based on previous mel-spectrogram and text tokens, thereby avoiding the inherent flaws associated with sampling discrete codec codes. 
+> In this work, we propose a continuous mel-spectrogram\footnote{We leave the exploration of other continuous representations, such as VAE latent hidden states, for future research endeavors.} based autoregressive language model (called ***MELLE***) for text-to-speech synthesis, as illustrated in Figure.01. ***MELLE*** is a robust single-pass zero-shot TTS model which autoregressively predicts mel-spectrogram frames based on previous mel-spectrogram and text tokens, thereby avoiding the inherent flaws associated with sampling discrete codec codes. 
 > The mel-spectrogram is then converted into waveform utilizing an off-the-shelf vocoder. 
 > In response to the aforementioned challenges, we first substitute cross-entropy loss with regression loss and introduce a spectrogram flux loss to promote variation of predicted mel-spectrograms and eliminate repetition issues.
 > Second, we design a latent sampling module, derived from variational inference, functions as a sequence sampling strategy thereby enhancing the diversity of the generated audio samples. 
@@ -241,14 +241,34 @@ $$
 
 ### 3.2.Architecture: 架构
 
-> As illustrated in Figure \ref{fig:overview}, ***MELLE*** comprises the following main components: pre-nets that respectively convert text into sub-word tokens and extract mel-spectrograms from speech, before projecting them to the model dimension; an autoregressive (AR) Transformer decoder that serves as the language model; a latent sampling module that samples latent embedding from a predicted Gaussian distribution, and then projects it back to the spectrogram space; a stop prediction layer that determines the end of the speech and a convolutional post-net for spectrogram refinement, similar to the methods described in ([Tacotron2](../../Models/TTS2_Acoustic/2017.12.16_Tacotron2.md); [TransformerTTS](../../Models/TTS2_Acoustic/2018.09.19_Transformer_TTS.md)).
+![](Images/2024.07.11_MELLE_Fig.01.png)
+
+<details>
+<summary>原文</summary>
+
+> As illustrated in Figure.01, ***MELLE*** comprises the following main components: pre-nets that respectively convert text into sub-word tokens and extract mel-spectrograms from speech, before projecting them to the model dimension; an autoregressive (AR) Transformer decoder that serves as the language model; a latent sampling module that samples latent embedding from a predicted Gaussian distribution, and then projects it back to the spectrogram space; a stop prediction layer that determines the end of the speech and a convolutional post-net for spectrogram refinement, similar to the methods described in ([Tacotron2](../../Models/TTS2_Acoustic/2017.12.16_Tacotron2.md); [TransformerTTS](../../Models/TTS2_Acoustic/2018.09.19_Transformer_TTS.md)).
 > Finally, a vocoder is used to recover the speech from generated mel-spectrogram. 
 >
 > Unlike neural codec language models that iteratively predict multi-layer codec codes, we do not require an additional non-autoregressive (NAR) model thanks to the completeness of the mel-spectrogram.
 > This simplification significantly improve computational and storage efficiency.
 > Moreover, by adjusting the reduction factor, ***MELLE*** can generate multiple mel-spectrogram frames at one step, further enhancing efficiency while still maintaining superior performance.
 
-#### 3.2.1.Autoregressive Language Model
+</details>
+<br>
+
+如图所示, ***MELLE*** 由如下主要成分组成: 
+- 预网络: 分别将文本转换为 sub-word token, 从音频提取梅尔频谱, 之后将它们映射到模型维度;
+- 自回归 Transformer 解码器: 作为语言模型;
+- 隐采样模块: 从预测的高斯分布采样隐嵌入, 并将其映射回梅尔频谱空间;
+- 停止预测层: 确定音频的结束;
+- 卷积后网络: 用于频谱精细化, 类似于 Tacotron2 和 Transformer-TTS.
+- 声码器: 从生成的梅尔频谱恢复语音.
+
+和神经编解码语言模型迭代式预测多层编解码器编码不同, 由于梅尔频谱的完整性, 我们不需要额外的非自回归模型.
+这种简化显著提高计算和存储效率.
+此外, 通过调整缩减因子, ***MELLE*** 可以一次生成多个梅尔频谱帧, 进一步提高效率, 同时仍然保持优秀性能.
+
+#### 3.2.1.Autoregressive Language Model: 自回归语言模型
 
 > We employ a unidirectional Transformer decoder as the language model (LM) to autoregressively generates acoustic continuous features based on the textual input and acoustic prompts.
 > Specifically, input text tokens $\pmb{x}$, with an appended <EOS> token, are first converted into embeddings by the text embedding layer based on their indices. 
@@ -256,7 +276,7 @@ $$
 > The LM, consisting of blocks of multi-head attention and feed-forward layers, takes the concatenation of text and acoustic embeddings as input to model the dependency between semantic and acoustic information.
 > The output of the LM $\pmb{e}_t$ at time step $t$ is subsequently processed by the following modules of ***MELLE*** to synthesize the next-frame output, which is detailed in the following section.
 
-#### 3.2.2.Latent Sampling Module
+#### 3.2.2.Latent Sampling Module: 隐采样模块
 
 > Sampling strategy is an critical part in TTS systems, as it not only introduces diversity in the output, but also enhances the generalization ability of the model. 
 > For example, Tacotron-like models ([Tacotron](../../Models/TTS2_Acoustic/2017.03.29_Tacotron.md); [Tacotron2](../../Models/TTS2_Acoustic/2017.12.16_Tacotron2.md)) enable dropout in their pre-net during inference to introduce variation;
@@ -284,17 +304,17 @@ $$
 > Note that the latent sampling module is differentiable with the reparameterization technique.
 > Next, the latent variable $\pmb{z}_t$ is passed through a multi-layer perceptron (MLP) with residual connections, mapping it to the mel-spectrogram space as $\pmb{y}'_{t}$, where $t=0, 1, ..., T-1$.
 
-#### 3.2.3.Stop Prediction Layer and Post-Net
+#### 3.2.3.Stop Prediction Layer and Post-Net: 停止预测层和后网络
 
 > Since ***MELLE*** directly predicts continuous mel-spectrograms rather than discrete tokens, it cannot generate an <EOS> token to indicate the end of generation.
 > Instead, we use a linear layer as a binary classifier, taking $\pmb{e}_t$ to determine if the generation should conclude, as depicted in Figure \ref{fig:modules} (mid).
 > Following previous neural TTS models ([Tacotron](../../Models/TTS2_Acoustic/2017.03.29_Tacotron.md); [Tacotron2](../../Models/TTS2_Acoustic/2017.12.16_Tacotron2.md)), we employ multiple convolutional blocks as the post-net to produce a residual that is added to $\pmb{y}'=\{\pmb{y}'_{0}, \pmb{y}'_{1}, ..., \pmb{y}'_{T-1}\}$, resulting in the refined mel-spectrogram $\pmb{y}''=\{\pmb{y}''_{0}, \pmb{y}''_{1}, ..., \pmb{y}''_{T-1}\}$, as shown in Figure \ref{fig:modules} (right). 
 > During training, the model is trained using teacher-forcing; while during inference, post-net processes $\pmb{y}'$ after the AR generation concludes.
 
-### 3.3.Training Objective
+### 3.3.Training Objective: 训练目标
 
 > The training process of ***MELLE*** is efficient and straightforward, due to the absence of \mbox{VALL-E}'s complex hierarchical structure.
-> As illustrated in Figure \ref{fig:overview}, during training, a single end-to-end autoregressive model is optimized with the teacher-forcing manner using four loss functions: (1) a regression loss; (2) a Kullback-Leibler (KL) divergence loss; (3) a novel spectrogram flux loss; and (4) a binary cross entropy (BCE) loss for stop prediction.
+> As illustrated in Figure.01, during training, a single end-to-end autoregressive model is optimized with the teacher-forcing manner using four loss functions: (1) a regression loss; (2) a Kullback-Leibler (KL) divergence loss; (3) a novel spectrogram flux loss; and (4) a binary cross entropy (BCE) loss for stop prediction.
 > They work collaboratively to enhance overall performance:
 
 $$
@@ -303,7 +323,7 @@ $$
 \end{aligned}
 $$
 
-#### Regression Loss
+#### Regression Loss: 回归损失
 
 > The regression loss is a fundamental component of the training objective, ensuring the accurate prediction of mel-spectrogram frames, like conventional TTS ([TransformerTTS](../../Models/TTS2_Acoustic/2018.09.19_Transformer_TTS.md)).
 > The regression loss, \(\mathcal{L}_{\text{reg}}\), is composed of a combination of L1 and L2 losses, applied to both intermediate prediction $\pmb{y}'$ and final prediction $\pmb{y}''$ of the mel-spectrogram.
@@ -319,7 +339,7 @@ $$
 
 > where $\pmb{y}$ represents the ground-truth mel-spectrogram target.
 
-#### KL Divergence Loss
+#### KL Divergence Loss: KL散度损失
 
 > We introduce a Kullback-Leibler (KL) divergence loss based on the concept of variational inference \citep{kingma2014vae, blei2017vi_review}, to enhance the diversity and stability of ***MELLE***.
 > The KL divergence measures the difference between the predicted latent distribution \( p_\theta(\pmb{z}_t \mid \pmb{e}_t) \) and a simpler distribution \( p(\pmb{z}_t) \).
@@ -338,7 +358,7 @@ $$
 > The detailed derivation is provided in Appendix \ref{appendix:derivation}.
 > By integrating the KL divergence into the loss function, ***MELLE*** achieves a balance between reconstruction quality and latent space regularization, ultimately contributing to enhanced expressive diversity and robustness of the generated mel-spectrograms. 
 
-#### The Spectrogram Flux Loss
+#### The Spectrogram Flux Loss: 频谱流动损失
 
 > To encourage the dynamic variation of the generated mel-spectrogram frames, we propose a novel spectrogram flux loss as a regularization term.
 > This loss function penalizes low variability between consecutive frames, thereby promoting changes and preventing the generation of overly static mel-spectrograms:
@@ -354,12 +374,12 @@ $$
 >
 > Additionally, by penalizing flat predictions, the model is incentivized to produce more diverse and dynamic frame sequences, thereby preventing monotonic and unnatural speech.
 
-#### Stop Prediction Loss
+#### Stop Prediction Loss: 停止预测损失
 
 > We use a linear layer to project the output of the LM to a logit and calculate the BCE loss, $\mathcal{L}_{\text{stop}}$, for stop prediction, like [TransformerTTS](../../Models/TTS2_Acoustic/2018.09.19_Transformer_TTS.md) and [SpeechT5](../../Models/_tmp/SpeechT5.md). 
 > During this calculation, positive and negative frames are extremely imbalanced, as each utterance has only one positive frame indicating "stop." To address this, we impose a larger weight (100) for the positive frames in the BCE loss.
 
-### 3.4.Inference: In-Context Learning for Mel-Spectrogram
+### 3.4.Inference: In-Context Learning for Mel-Spectrogram<br>推理: 梅尔频谱的上下文学习
 
 > During inference, we perform zero-shot text-to-speech by autoregressively predicting the mel-spectrogram. 
 > Given the text content $\pmb{x}$ for synthesis, and a piece of speech prompt (with text transcription $\tilde{\pmb{x}}$ and mel-spectrogram $\tilde{\pmb{y}}$), at each time step \( t \), ***MELLE*** generates the next-frame mel-spectrogram \( \pmb{y}_t' \) from a latent embedding \( \pmb{z}_t \), which is sampled from a distribution conditioned on the concatenation of $\tilde{\pmb{x}}$, $\pmb{x}$, $\tilde{\pmb{y}}$, and $\pmb{y}_{<t}$.
