--- a/Models/Speech_LLM/2024.07.11_MELLE.md
+++ b/Models/Speech_LLM/2024.07.11_MELLE.md
@@ -341,10 +341,23 @@ $$
 
 #### 3.2.3.Stop Prediction Layer and Post-Net: 停止预测层和后网络
 
-> Since ***MELLE*** directly predicts continuous mel-spectrograms rather than discrete tokens, it cannot generate an <EOS> token to indicate the end of generation.
+<details>
+<summary>原文</summary>
+
+> Since ***MELLE*** directly predicts continuous mel-spectrograms rather than discrete tokens, it cannot generate an `<EOS>` token to indicate the end of generation.
 > Instead, we use a linear layer as a binary classifier, taking $\pmb{e}_t$ to determine if the generation should conclude, as depicted in Figure \ref{fig:modules} (mid).
 > Following previous neural TTS models ([Tacotron](../../Models/TTS2_Acoustic/2017.03.29_Tacotron.md); [Tacotron2](../../Models/TTS2_Acoustic/2017.12.16_Tacotron2.md)), we employ multiple convolutional blocks as the post-net to produce a residual that is added to $\pmb{y}'=\{\pmb{y}'_{0}, \pmb{y}'_{1}, ..., \pmb{y}'_{T-1}\}$, resulting in the refined mel-spectrogram $\pmb{y}''=\{\pmb{y}''_{0}, \pmb{y}''_{1}, ..., \pmb{y}''_{T-1}\}$, as shown in Figure \ref{fig:modules} (right). 
 > During training, the model is trained using teacher-forcing; while during inference, post-net processes $\pmb{y}'$ after the AR generation concludes.
+
+</details>
+<br>
+
+因为 ***MELLE*** 直接预测连续的梅尔频谱图而非离散标记, 因此无法生成 `<EOS>` 标记来指示生成结束.
+所以我们使用一个线性层作为二分类器, 以 $\pmb{e}_t$ 为依据判断生成是否结束, 如图 02 中右侧所示.
+
+遵循之前的神经网络文本转语音模型, 我们采用多卷积块作为后网络以生成残差, 并将其加到 $\pmb{y}'=\{\pmb{y}'_{0}, \pmb{y}'_{1}, ..., \pmb{y}'_{T-1}\}$ 上, 得到修正后的梅尔频谱图 $\pmb{y}''=\{\pmb{y}''_{0}, \pmb{y}''_{1}, ..., \pmb{y}''_{T-1}\}$, 如图 02 中右侧所示.
+在训练时, 模型使用教师强迫方式训练;
+在推理时, 后网络在自回归生成结束后处理 $\pmb{y}'$.
 
 ### 3.3.Training Objective: 训练目标
 
