--- a/Models/Speech_LLM/2024.07.11_MELLE.md
+++ b/Models/Speech_LLM/2024.07.11_MELLE.md
@@ -361,9 +361,19 @@ $$
 
 ### 3.3.Training Objective: 训练目标
 
-> The training process of ***MELLE*** is efficient and straightforward, due to the absence of \mbox{VALL-E}'s complex hierarchical structure.
+<details>
+<summary>原文</summary>
+
+> The training process of ***MELLE*** is efficient and straightforward, due to the absence of VALL-E's complex hierarchical structure.
 > As illustrated in Figure.01, during training, a single end-to-end autoregressive model is optimized with the teacher-forcing manner using four loss functions: (1) a regression loss; (2) a Kullback-Leibler (KL) divergence loss; (3) a novel spectrogram flux loss; and (4) a binary cross entropy (BCE) loss for stop prediction.
 > They work collaboratively to enhance overall performance:
+
+</details>
+<br>
+
+因为没有 VALL-E 那样的复杂层次结构, ***MELLE*** 的训练过程是高效且直接的.
+如图 01 所示, 在训练时, 单个端到端的自回归模型以教师强制的方式进行优化, 采用四个损失函数: (1) 回归损失; (2) KL 散度损失; (3) 新的频谱流动损失; (4) 用于停止预测的二元交叉熵损失.
+他们共同作用, 以提升整体性能:
 
 $$
 \begin{aligned}
@@ -373,9 +383,19 @@ $$
 
 #### Regression Loss: 回归损失
 
+<details>
+<summary>原文</summary>
+
 > The regression loss is a fundamental component of the training objective, ensuring the accurate prediction of mel-spectrogram frames, like conventional TTS ([TransformerTTS](../../Models/TTS2_Acoustic/2018.09.19_Transformer_TTS.md)).
-> The regression loss, \(\mathcal{L}_{\text{reg}}\), is composed of a combination of L1 and L2 losses, applied to both intermediate prediction $\pmb{y}'$ and final prediction $\pmb{y}''$ of the mel-spectrogram.
+> The regression loss, $\mathcal{L}_{\text{reg}}$, is composed of a combination of L1 and L2 losses, applied to both intermediate prediction $\pmb{y}'$ and final prediction $\pmb{y}''$ of the mel-spectrogram.
 > It is defined as follows:
+
+</details>
+<br>
+
+回归损失是训练目标的基本组成部分, 用于确保梅尔频谱帧的精确预测, 如传统文本转语音模型 Transformer-TTS.
+回归损失由 L1 和 L2 损失组合构成, 对中间预测 $\pmb{y}'$ 和最终预测 $\pmb{y}''$ 均应用.
+其定义如下:
 
 $$
 \begin{aligned}
@@ -389,11 +409,23 @@ $$
 
 #### KL Divergence Loss: KL散度损失
 
+<details>
+<summary>原文</summary>
+
 > We introduce a Kullback-Leibler (KL) divergence loss based on the concept of variational inference \citep{kingma2014vae, blei2017vi_review}, to enhance the diversity and stability of ***MELLE***.
-> The KL divergence measures the difference between the predicted latent distribution \( p_\theta(\pmb{z}_t \mid \pmb{e}_t) \) and a simpler distribution \( p(\pmb{z}_t) \).
+> The KL divergence measures the difference between the predicted latent distribution $p_\theta(\pmb{z}_t \mid \pmb{e}_t)$ and a simpler distribution $p(\pmb{z}_t)$.
 > Unlike \cite{kingma2014vae}, which selects \( p(\pmb{z}_t) \) as a standard normal distribution, we let \(\pmb{z}_t\) possess the same dimensionality as the mel-spectrogram and define \( p(\pmb{z}_t) \) as \(\mathcal{N}(\pmb{y}_t, \pmb{I})\). 
 > This can be seen as a shortcut on the optimization path thus accelerates the model's learning.
 > Combining equation (\ref{eq:gaussian}), the KL divergence loss among $T$ time steps can be analytically computed as
+
+</details>
+<br>
+
+我们基于变分推断引入 KL 散度损失以增强 ***MELLE*** 的多样性和稳定性.
+KL 散度衡量预测的隐分布 $p_\theta(\pmb{z}_t|\pmb{e}_t)$ 和相似分布 $p(\pmb{z}_t)$ 之间的差异.
+和 VAE 选择 $p(\pmb{z}_t)$ 为标准正态分布不同, 我们让 $\pmb{z}_t$ 具有与梅尔频谱图相同的维度, 并定义 $p(\pmb{z}_t)$ 为 $\mathcal{N}(\pmb{y}_t, \pmb{I})$.
+这可以看作是优化路径上的一个捷径, 加快模型的学习速度.
+将公式 (\ref{eq:gaussian}) 代入, 对于 $T$ 个时间步, KL 散度损失可以用如下形式计算 ($d$ 为特征空间的维度):
 
 $$
 \begin{aligned}
@@ -402,9 +434,19 @@ $$
 \end{aligned}
 $$
 
+<details>
+<summary>原文</summary>
+
 > where \( d \) is the dimensionality of the feature space.
 > The detailed derivation is provided in Appendix \ref{appendix:derivation}.
 > By integrating the KL divergence into the loss function, ***MELLE*** achieves a balance between reconstruction quality and latent space regularization, ultimately contributing to enhanced expressive diversity and robustness of the generated mel-spectrograms. 
+
+</details>
+<br>
+
+详细推导在附录中给出. #TODO
+
+通过将 KL 散度整合到损失函数中, ***MELLE*** 实现了在重构质量和隐空间正则化之间取得平衡, 从而促进生成的梅尔频谱图的更具多样性和鲁棒性.
 
 #### The Spectrogram Flux Loss: 频谱流动损失
 
