--- a/Models/Speech_LLM/2024.07.11_MELLE.md
+++ b/Models/Speech_LLM/2024.07.11_MELLE.md
@@ -77,15 +77,15 @@
 ## 1.Introduction: 引言
 
 > The objective of next-token prediction, which involves predicting the next discrete token based on the previous tokens as condition, is foundational to the recent progress observed in autoregressive large language models (LLMs).
-> Recently, the success of LLMs in natural language processing (NLP) tasks has encouraged the exploration of autoregressive language modeling approaches in audio synthesis fields ([AudioLM](../../Models/Speech_LLM/2022.09.07_AudioLM.md); [VALL-E](../../Models/Speech_LLM/2023.01.05_VALL-E.md)). 
-> Neural codec language models, exemplified by [VALL-E](../../Models/Speech_LLM/2023.01.05_VALL-E.md) and [VALL-E X](../../Models/Speech_LLM/2023.03.07_VALL-E_X.md), reveal the potential of such principle in the zero-shot text-to-speech (TTS) task via leveraging large-scale multi-lingual multi-speaker multi-domain training corpus. 
-> Unlike traditional TTS systems that rely heavily on complex and multi-step pipelines, they utilize a decoder-only approach to predict neural codec codes, which are discrete tokens encoded from continuous waveforms leveraging neural codec models ([SoundStream](../../Models/Speech_Neural_Codec/2021.07.07_SoundStream.md); [EnCodec](../../Models/Speech_Neural_Codec/2022.10.24_EnCodec.md)). 
+> Recently, the success of LLMs in natural language processing (NLP) tasks has encouraged the exploration of autoregressive language modeling approaches in audio synthesis fields (**AudioLM (2022)**; **VALL-E (2023)**). 
+> Neural codec language models, exemplified by **VALL-E (2023)** and **VALL-E X (2023)**, reveal the potential of such principle in the zero-shot text-to-speech (TTS) task via leveraging large-scale multi-lingual multi-speaker multi-domain training corpus. 
+> Unlike traditional TTS systems that rely heavily on complex and multi-step pipelines, they utilize a decoder-only approach to predict neural codec codes, which are discrete tokens encoded from continuous waveforms leveraging neural codec models (**SoundStream (2021)**; **EnCodec (2022)**). 
 >
 > Although achieving impressive naturalness and diversity in synthesized audios, VALL-E and its variants are plagued by following several drawbacks.
 > First, neural codec codes, originally designed for audio compression, exhibit lower fidelity compared to the well-established mel-spectrogram \citep{puvvada2024discrete}.
 > This phenomenon is also observed in the field of graphics, where the reconstruction quality of vector-quantized tokenizers typically lags behind that of their continuous-valued counterparts \citep{rombach2022high,huang2023not,kaiming2024autoregressive}.
 > Second, the codec language model VALL-E suffers from robustness issues stemming from its random sampling strategy, which is inherited from text language model for selecting discrete tokens.
-> This issue is more pronounced with acoustic tokens as opposed to textual ones due to the greater similarity among consecutive codec codes, which can lead to continuous stretches of silence or persistent noise ([VALL-E](../../Models/Speech_LLM/2023.01.05_VALL-E.md); [ELLA-V](../../Models/Speech_LLM/2024.01.14_ELLA-V.md)).
+> This issue is more pronounced with acoustic tokens as opposed to textual ones due to the greater similarity among consecutive codec codes, which can lead to continuous stretches of silence or persistent noise (**VALL-E (2023)**; **ELLA-V (2024)**).
 > Third, neural codec language models typically necessitate a complicated two-pass decoding process, involving an autoregressive (AR) model for generating coarse primary audio tokens, followed by a non-autoregressive (NAR) model to iteratively predict the rest multiple codebook codes for refinement. 
 > This multi-step procedure compromises inference efficiency, leading to increased computational demands and doubled storage requirements.
 > 
@@ -105,10 +105,10 @@
 >
 > We conducted evaluations of our ***MELLE*** on both the large-scale 50K-hour [Libriheavy](../../Datasets/2023.09.15_Libriheavy.md) training dataset and the relatively small 960-hour [LibriSpeech](../../Datasets/2015.04.19_LibriSpeech.md) training dataset. 
 > Following recent works, we use LibriSpeech test-clean set for zero-shot TTS evaluation.
-> Experimental results demonstrate that the proposed ***MELLE*** is on par with [VALL-E 2](../../Models/Speech_LLM/2024.06.08_VALL-E2.md) in objective metrics, and surpasses VALL-E 2 in subjective metrics.
+> Experimental results demonstrate that the proposed ***MELLE*** is on par with **VALL-E 2 (2024)** in objective metrics, and surpasses **VALL-E 2 (2024)** in subjective metrics.
 > It also outperforms previous neural codec language models, including VALL-E and its other variants, achieving superior performance across multiple metrics that reflect naturalness, robustness, similarity, and inference efficiency. 
 >
-> Specifically, ***MELLE*** surpasses the ground truth audios in WER (1.47\% vs. 1.61\%), achieving a 47.9\% relative reduction in WER compared to VALL-E and an 8.1\% reduction compared to VALL-E 2 on the continuation inference task for zero-shot TTS. 
+> Specifically, ***MELLE*** surpasses the ground truth audios in WER (1.47\% vs. 1.61\%), achieving a 47.9\% relative reduction in WER compared to VALL-E and an 8.1\% reduction compared to **VALL-E 2 (2024)** on the continuation inference task for zero-shot TTS. 
 > For subjective evaluations, ***MELLE*** is more favorably received by human listeners than previous models, achieving comparable performance to the original ground truth in terms of MOS (4.20 vs. 4.29) and CMOS (-0.032 for ours vs. ground truth), and an even higher SMOS (4.40 vs. 3.94) than the ground-truth speech.
 
 ## 2.Related Works: 相关工作
@@ -123,7 +123,7 @@
 > Parametric TTS systems convert speech waves into spectrograms, utilizing acoustic parameters such as fundamental frequency and duration to synthesize new audio outputs.
 > With the rapid development of neural networks, end-to-end neural TTS systems are proposed to simplify previous speech synthesis pipeline via a single neural network, eliminating the need for the production of these linguistic and acoustic features ([Tacotron](../../Models/TTS2_Acoustic/2017.03.29_Tacotron.md); [TransformerTTS](../../Models/TTS2_Acoustic/2018.09.19_Transformer_TTS.md); [FastSpeech](../../Models/TTS2_Acoustic/2019.05.22_FastSpeech.md)).
 >
-> The advanced end-to-end neural TTS models, such as [Tacotron](../../Models/TTS2_Acoustic/2017.03.29_Tacotron.md), [TransformerTTS](../../Models/TTS2_Acoustic/2018.09.19_Transformer_TTS.md), and [FastSpeech](../../Models/TTS2_Acoustic/2019.05.22_FastSpeech.md), usually generate mel-spectrograms directly from texts, then synthesize the audio results from the mel-spectrogram by a vocoder such as [WaveNet](../../Models/TTS3_Vocoder/2016.09.12_WaveNet.md).
+> The advanced end-to-end neural TTS models, such as [Tacotron](../../Models/TTS2_Acoustic/2017.03.29_Tacotron.md), [TransformerTTS](../../Models/TTS2_Acoustic/2018.09.19_Transformer_TTS.md), and [FastSpeech](../../Models/TTS2_Acoustic/2019.05.22_FastSpeech.md), usually generate mel-spectrograms directly from texts, then synthesize the audio results from the mel-spectrogram by a vocoder such as **WaveNet (2016)**.
 > TransformerTTS employs Transformer-based encoder-decoder network as the main framework to replace RNN structures in Tacotron.
 > FastSpeech further improve the speech quality and decoding efficiency using the non-autoregressive generation model with a duration module.
 > These model are trained on small-scale, clean, single-speaker or few-speaker dataset, such as LJSpeech and LibriTTS.
@@ -154,14 +154,21 @@
 <summary>原文</summary>
 
 > Motivated by the zero-shot and in-context learning capabilities of large language models (LLMs) on natural language processing (NLP) tasks, various research works are proposed to address zero-shot TTS through a language modeling approach.
-> [VALL-E](../../Models/Speech_LLM/2023.01.05_VALL-E.md) first regards TTS tasks as a conditional language task, which utilizes neural codec codes as intermediate representation instead of mel-spectrogram, then uses a codec decoder to recover the waveform from predicted codec codes.
+> **VALL-E (2023)** first regards TTS tasks as a conditional language task, which utilizes neural codec codes as intermediate representation instead of mel-spectrogram, then uses a codec decoder to recover the waveform from predicted codec codes.
 > VALL-E employs two-stage modeling method, with an autoregressive model for generating coarse audio tokens, followed by a non-autoregressive model to iteratively predict multi-codebook codes for refinement.
-> [VALL-E X](../../Models/Speech_LLM/2023.03.07_VALL-E_X.md) extends VALL-E into multi-lingual scenario to support zero-shot cross-lingual speech synthesis and speech-to-speech translation.
+> **VALL-E X (2023)** extends VALL-E into multi-lingual scenario to support zero-shot cross-lingual speech synthesis and speech-to-speech translation.
 > [Mega-TTS](../../Models/Speech_LLM/2023.06.06_Mega-TTS.md) proposes to disentangle the multiple attributes in speech, such as content, timbre, prosody, and phase attributes, then model each of them according to their intrinsic properties with a language modeling approach.
-> [ELLA-V](../../Models/Speech_LLM/2024.01.14_ELLA-V.md), [RALL-E](../../Models/Speech_LLM/2024.04.04_RALL-E.md), and [VALL-E R](../../Models/Speech_LLM/2024.06.12_VALL-E_R.md) aims to improve robustness and stability of VALL-E via additional fine-grained speech-text alignment information. 
+> **ELLA-V (2024)**, [RALL-E](../../Models/Speech_LLM/2024.04.04_RALL-E.md), and [VALL-E R](../../Models/Speech_LLM/2024.06.12_VALL-E_R.md) aims to improve robustness and stability of VALL-E via additional fine-grained speech-text alignment information. 
 > [BASE TTS](../../Models/Speech_LLM/2024.02.12_BASE-TTS.md) employs discrete tokens derived from [WavLM](../../Models/Speech_Representaion/2021.10.26_WavLM.md) and scales the codec language model to larger parameters and training data.
 > [Seed-TTS](../../Models/Speech_LLM/Seed-TTS.md) replaces NAR model in VALL-E with a diffusion model, which generates continuous speech representations according generated speech tokens from AR stage. 
-> In parallel to our work, [VALL-E 2](../../Models/Speech_LLM/2024.06.08_VALL-E2.md) shares the same architec
+> In parallel to our work, **VALL-E 2 (2024)** shares the same architecture as VALL-E but employs a repetition-aware sampling strategy that promotes more deliberate sampling choices.
+>
+> Other studies have investigated fully non-autoregressive approaches to increase the speed of model inference.
+> For instance, [SoundStorm](../../Models/Speech_LLM/2023.05.16_SoundStorm.md) adapts a parallel, non-autoregressive, confidence-based decoding scheme for the generation of codec codes.
+> [StyleTTS2](../../Models/Speech_LLM/2023.06.13_StyleTTS2.md) and [NaturalSpeech 3](../../Models/Diffusion/2024.03.05_NaturalSpeech3.md) use diffusion model to achieve better TTS synthesis.
+> [Voicebox](../../Models/Speech_LLM/2023.06.23_VoiceBox.md) and [Audiobox](../../Models/Speech_LLM/2023.12.25_Audiobox.md) employ non-autoregressive flow-matching based models for transcript-guided speech generation.
+> Recently, [E2 TTS](../../Models/_tmp/2024.06.26_E2_TTS.md) presents a fully non-autoregressive TTS systems consisting of flow-matching-based mel-spectrogram generator trained with the audio infilling task, and a vocoder.
+> Different previous works, ***MELLE*** leverages continuous-valued tokens based autoregressive language modeling approach with variational inference for text-to-speech synthesis. 
 
 </details>
 <br>
@@ -175,7 +182,7 @@
 - ELLA-V, RALL-E, VALL-E R 通过额外的细粒度语音文本对齐信息来提升 VALL-E 的鲁棒性和稳定性.
 - BASE TTS 采用由 WavLM 导出的离散 Token, 并将编解码器语言模型扩展到更大的参数和训练数据.
 - Seed-TTS 将 VALL-E 中的 NAR 模型替换为扩散模型, 该模型根据自回归阶段生成的语音 Token 来生成连续语音表示.
-- VALL-E 2 采用和 VALL-E 相同的架构, 但是用重复感知采样策略来促进更有意识的采样选择.
+- **VALL-E 2 (2024)** 采用和 VALL-E 相同的架构, 但是用重复感知采样策略来促进更有意识的采样选择.
 
 其他研究则试图探索完全非自回归的方法来提升模型推理速度.
 - SoundStorm 采用并行, 非自回归, 基于置信度解码方案以生成编解码器编码.
@@ -295,7 +302,7 @@ $$
 
 > Sampling strategy is an critical part in TTS systems, as it not only introduces diversity in the output, but also enhances the generalization ability of the model. 
 > For example, Tacotron-like models ([Tacotron](../../Models/TTS2_Acoustic/2017.03.29_Tacotron.md); [Tacotron2](../../Models/TTS2_Acoustic/2017.12.16_Tacotron2.md)) enable dropout in their pre-net during inference to introduce variation;
-> Neural codec language models ([VALL-E](../../Models/Speech_LLM/2023.01.05_VALL-E.md); [VALL-E X](../../Models/Speech_LLM/2023.03.07_VALL-E_X.md)) adopt the top-p random sampling to avoid the collapse outputs leading by greedy search; 
+> Neural codec language models (**VALL-E (2023)**; **VALL-E X (2023)**) adopt the top-p random sampling to avoid the collapse outputs leading by greedy search; 
 > Diffusion-based ([NaturalSpeech2](../../Models/Diffusion/2023.04.18_NaturalSpeech2.md); [NaturalSpeech3](../../Models/Diffusion/2024.03.05_NaturalSpeech3.md)) and flow-matching-based methods ([Voicebox](../../Models/Speech_LLM/2023.06.23_VoiceBox.md)) restore speech representations from the sampling of a simpler distribution. 
 >
 > In this study, inspired by variational autoencoders (VAEs) \citep{kingma2014vae, blei2017vi_review}, we integrate a novel latent sampling module within ***MELLE***, aimed at enhancing both expressive diversity and robustness, as shown in Figure \ref{fig:modules} (left).
