--- a/Evaluations/2024.07.17_TTSDS.md
+++ b/Evaluations/2024.07.17_TTSDS.md
@@ -57,15 +57,15 @@
 
 ## 1.Introduction: 引言
 
-> There has been a recent surge in synthetic speech generation quality enabled by systems using language modeling architectures generating discrete units~\cite{defossez2022encodec} which are then used to reconstruct the waveform \cite{lyth2024natural}.
+> There has been a recent surge in synthetic speech generation quality enabled by systems using language modeling architectures generating discrete units (**[EnCodec (2022)](../Models/Speech_Neural_Codec/2022.10.24_EnCodec.md)**) which are then used to reconstruct the waveform (**[Parler-TTS (2024)](../Models/_tmp/2024.02.13_Parler-TTS.md)**).
 > However, many of the most recent systems have been released to the community without accompanying papers and/or evaluation.
 > This is understandable since the field is moving at a quick pace, and evaluation of synthetic speech is hard.
 > The remaining systems are evaluated mostly with Mean Opinion Score (MOS) and its factors such as naturalness, speaker similarity, and sometimes intelligibility.
-> Some systems also rely on MOS predicted with trained neural networks \cite{chen2024vall,casanova2024xtts}.
+> Some systems also rely on MOS predicted with trained neural networks (**[VALL-E 2 (2024)](../Models/Speech_LLM/2024.06.08_VALL-E2.md)**; **[XTTS (2024)](../Models/Speech_LLM/2024.06.07_XTTS.md)**).
 > Unfortunately, MOS is becoming less useful as real and synthetic speech get closer in quality, and cannot be compared across studies and over time \cite{le2022back}.
 >
 > Many factors, such as prosody, intelligibility, naturalness, and speaker similarity, contribute to perceived overall speech quality.
-> Some works focus on the prosody factor by comparing pitch or duration of real to synthetic speech \cite{budzianowski2024pheme,li2024styletts,minixhofer2023eval}, while others include metrics on Word Error Rate (WER) to account for intelligibility or more general algorithmic measures such as Mel-Cepstral Distoration (MCD) \cite{chen2024vall,budzianowski2024pheme}.
+> Some works focus on the prosody factor by comparing pitch or duration of real to synthetic speech \cite{budzianowski2024pheme,li2024styletts,minixhofer2023eval}, while others include metrics on Word Error Rate (WER) to account for intelligibility or more general algorithmic measures such as Mel-Cepstral Distoration (MCD) (**[VALL-E 2 (2024)](../Models/Speech_LLM/2024.06.08_VALL-E2.md)**; budzianowski2024pheme).
 > To the best of our knowledge, there is only one published effort which evaluated state-of-the-art TTS systems based on LLM architectures \cite{ttsarena}.
 > It uses crowdsourced A/B preference tests to produce an Elo rating for each system.
 > As these ratings are the first comparative study of the next generation of TTS systems, they are a great resource, however this type of evaluation comes with a set of challenges.
@@ -231,7 +231,7 @@ W_{\text{real}}+W_{\text{noise}}
 > The Blizzard 2008 challenge \cite{king2008blizzard} compared 22 TTS systems across several tasks using MOS.
 > We choose the "Voice A" audio-book task with 15 hours of data.
 > Later, the "Back to the Future" (BTTF) \cite{le2022back} compared unit selection, hybrid and statistical parametric HMM-based systems from the Blizzard 2013 challenge \cite{king2013blizzard} with deep learning systems inspired by the Blizzard 2021 challenge \cite{ling2021blizzard} based on FastPitch \cite{lancucki2021fastpitch} and Tacotron~\cite{wang2017tacotron}.
-> The latest systems, which are most commonly based on discrete speech representations generatively modeled by LLM-like systems \cite{chen2024vall}, are represented by the TTS Arena leaderboard \cite{ttsarena}, which is a crowdsourced effort to evaluate these systems.
+> The latest systems, which are most commonly based on discrete speech representations generatively modeled by LLM-like systems (**[VALL-E 2 (2024)](../Models/Speech_LLM/2024.06.08_VALL-E2.md)**), are represented by the TTS Arena leaderboard \cite{ttsarena}, which is a crowdsourced effort to evaluate these systems.
 > Only systems released in 2023 and 2024 are featured in this evaluation.
 > Since the data is not publicly released, we reproduce datasets for as many of the systems as possible.\footnote{We had to exclude MetaVoice and GPT-SoVITS due to reference audio length requirements; and MeloTTS due to only female voices being available.
 > This leaves us 9 out of the 12 publicly available systems.} As conditioning for the TTS systems, we use speaker reference waveforms from the LibriTTS \cite{zen2019libritts} test set, coupled with unrelated transcripts from the same set to make sure the data could not have been encountered during training.
@@ -243,7 +243,7 @@ W_{\text{real}}+W_{\text{noise}}
 > We compare our benchmark with two MOS prediction methods.
 > The first method is \textit{WVMOS}~\cite{andreev2022hifi}, which uses wav2vec 2.0 model~\cite{baevski2020wav2vec2} fine-tuned to predict MOS scores.
 > Its system-level correlation coefficients range from 0.68 to 0.96 for different corruptions of speech and their corresponding MOS scores~\cite{andreev2022hifi}.
-> The second method is \textit{UTMOS}~\cite{saeki2022utmos}, which is an ensemble MOS prediction system that won several categories in the 2022 VoiceMOS challenge \cite{huang2022voicemos}, and has since been used for evaluation of several leading TTS systems \cite{casanova2024xtts,ju2024naturalspeech3}.
+> The second method is \textit{UTMOS}~\cite{saeki2022utmos}, which is an ensemble MOS prediction system that won several categories in the 2022 VoiceMOS challenge \cite{huang2022voicemos}, and has since been used for evaluation of several leading TTS systems (**[XTTS (2024)](../Models/Speech_LLM/2024.06.07_XTTS.md)**; **[NaturalSpeech3 (2024)](../Models/Diffusion/2024.03.05_NaturalSpeech3.md)**).
 >
 > For all system\(\times\)feature combinations, we compute the score as described in Section~\ref{sec:overall}.
 > We average all features for each factor, which gives us the corresponding factor score.
