--- a/Evaluations/2024.07.17_TTSDS.md
+++ b/Evaluations/2024.07.17_TTSDS.md
@@ -5,7 +5,7 @@
 
 - 标题: TTSDS: Text-to-Speech Distribution Score
 - 作者:
-  - 01 [Christoph Minixhofer](../Authors/Christoph_Minixhofer)
+  - 01 [Christoph Minixhofer](../Authors/Christoph_Minixhofer.md)
   - 02 [Ondřej Klejch](../Authors/Ondrej_Klejch.md)
   - 03 [Peter Bell](../Authors/Peter_Bell.md)
 - 机构:
@@ -18,12 +18,12 @@
 - 链接:
   - [ArXiv](https://arxiv.org/abs/2407.12707)
   - [DOI]()
-  - [Github]()
+  - [Github](https://github.com/ttsds/ttsds)
   - [Demo](https://ttsdsbenchmark.com)
   - [Scholar](https://scholar.google.com/scholar?cluster=)
 - 标签:
   - ?
-- 页数: ?
+- 页数: 8
 - 引用: ?
 - 被引: ?
 - 数据:
@@ -83,11 +83,11 @@
 > This approach also gives us more information on preferring one system over another.
 > For example, for character voices in a video game, a system with higher scores in prosody might be preferred, while for a language-learning app intelligibility would be the most important factor.
 >
-> In this paper, we devise a benchmark with the \textit{intelligibility}, \textit{prosody}, \textit{speakers}, \textit{environment} and \textit{general} factors.
-> We include \textit{intelligibility} and \textit{prosody} as they are important measures of synthetic speech quality \cite{campbell2007eval}.
-> We include the \textit{speaker} category to evaluate how closely TTS systems can model realistic speakers \cite{fan2015multi}.
-> We also include \textit{environment} as a factor due to the prevalence of artifacts present in speech synthesis \cite{wagner2019eval}, and the difficulty of some TTS system to generate speech with realistic recording conditions \cite{minixhofer2023eval}.
-> The \textit{general} factor is similar to previous measures of speech distributions as represented by latent representations such as Fréchet DeepSpeech Distance \cite{gritsenko2020fdsd}.
+> In this paper, we devise a benchmark with the intelligibility, prosody, speakers, environment and general factors.
+> We include intelligibility and prosody as they are important measures of synthetic speech quality \cite{campbell2007eval}.
+> We include the speaker category to evaluate how closely TTS systems can model realistic speakers \cite{fan2015multi}.
+> We also include environment as a factor due to the prevalence of artifacts present in speech synthesis \cite{wagner2019eval}, and the difficulty of some TTS system to generate speech with realistic recording conditions \cite{minixhofer2023eval}.
+> The general factor is similar to previous measures of speech distributions as represented by latent representations such as Fréchet DeepSpeech Distance \cite{gritsenko2020fdsd}.
 > Finally, we compute the overall TTSDS score as an average of all factors.
 >
 > We compute the score for each factor by comparing the distributions of both high-dimensional features (e.g., embeddings) and scalar features (e.g., pitch) extracted from the speech.
@@ -98,8 +98,8 @@
 >
 > We evaluate our benchmark by comparing to MOS scores and A/B test results obtained for 35 TTS systems from 2008, 2022 and 2024.
 > An average of our factor scores show correlation coefficients ranging from 0.60 to 0.83 for each time period, while the performance of state-of-the-art MOS prediction are less consistent, ranging from 0.05 to 0.85.
-> Additionally, we observe a shift in priorities of human evaluators over time, with \textit{environment} being more important for earlier systems, and \textit{prosody} being more important for later ones.
-> We make our benchmark suite and leaderboard openly available.\footnote{\url{https://ttsdsbenchmark.com}}
+> Additionally, we observe a shift in priorities of human evaluators over time, with environment being more important for earlier systems, and prosody being more important for later ones.
+> We make our benchmark suite and leaderboard openly available at https://ttsdsbenchmark.com
 
 ## 2.Related Works: 相关工作
 
@@ -112,36 +112,37 @@ None
 > The next step is to define relevant factors \cite{viswanathan2005measuring}.
 > For speech we define the following five major factors.
 >
-> A \textit{General} factor which measures the distribution of the speech without any assumptions.
+> A General factor which measures the distribution of the speech without any assumptions.
 > We use self-supervised learning (SSL) representations of the speech.
 >
-> An \textit{Environment} factor which measures noise or distortion present in the speech.
+> An Environment factor which measures noise or distortion present in the speech.
 > We use correlates for signal-to-noise ratio (SNR) and reverberation.
 >
-> An \textit{Intelligibility} factor which measures how easy the content of the speech is to recognize.
+> An Intelligibility factor which measures how easy the content of the speech is to recognize.
 > We use WER obtained using the transcripts provided to the TTS systems and ASR systems.
 >
-> A \textit{Prosody} factor which measures how realistic the prosody of the speech is.
+> A Prosody factor which measures how realistic the prosody of the speech is.
 > We use a pitch extractor, a SSL representation of the prosody and a proxy for duration and speaking rate.
 > 
-> A \textit{Speaker} factor which measures how close the speakers are to real ones.
+> A Speaker factor which measures how close the speakers are to real ones.
 > We use representations obtained from speaker verification systems.
 >
 > Since none of these factors can be measured directly, we rely on several features which correlate to the factors.
 > The extensive body of work in speech processing and representation learning provides these features, including representations from self-supervised models, statistical features, and algorithmic features.
-> For each feature derived from synthetic data, we define its \textit{score} as how close it is to the same feature derived from real speech.
+> For each feature derived from synthetic data, we define its score as how close it is to the same feature derived from real speech.
 
 ### 3.1.Features extracted from Speech
 
 > Here we identify the specific features (i.e., data points derived from speech) that represent each factor.
 > Table~\ref{tab:features} summarizes the models and algorithms that we use to extract these features.
 > For each of the aforementioned factors, we use two to three features to achieve a robust benchmark despite the low number of 80-100 samples per system.
-> For measuring the \textit{General} factor score, we use frame-level self-supervised representations extracted from the middle layers of the Hubert base \cite{hsu2021hubert} and wav2vec 2.0 base ~\cite{baevski2020wav2vec2} models.
-> For the \textit{Environment} distribution, we use two one-dimensional correlates of noise present in the signal -- we use VoiceFixer \cite{liu2021voicefixer} to remove noise from the speech, and then measure PESQ between the enhanced sample and the original one; we also use WadaSNR \cite{kim2008wada} to estimate the SNR of each sample.
-> For \textit{Intelligibility}, we calculate WER using the reference transcripts and automatic transcripts generated using wav2vec 2.0~\cite{baevski2020wav2vec2} fine tuned on 960 hours of LibriSpeech \cite{panayotov2015librispeech} and Whisper (small)~\cite{radford2023whisper}. \textit{Prosody} is quantified using frame-level representations from a self-supervised prosody model \cite{mpm} and frame-level pitch features \cite{morise2016world}. 
+> For measuring the General factor score, we use frame-level self-supervised representations extracted from the middle layers of the Hubert base \cite{hsu2021hubert} and wav2vec 2.0 base ~\cite{baevski2020wav2vec2} models.
+> For the Environment distribution, we use two one-dimensional correlates of noise present in the signal -- we use VoiceFixer \cite{liu2021voicefixer} to remove noise from the speech, and then measure PESQ between the enhanced sample and the original one; we also use WadaSNR \cite{kim2008wada} to estimate the SNR of each sample.
+> For Intelligibility, we calculate WER using the reference transcripts and automatic transcripts generated using wav2vec 2.0~\cite{baevski2020wav2vec2} fine tuned on 960 hours of LibriSpeech \cite{panayotov2015librispeech} and Whisper (small)~\cite{radford2023whisper}. 
+> Prosody is quantified using frame-level representations from a self-supervised prosody model \cite{mpm} and frame-level pitch features \cite{morise2016world}. 
 > Additionally, we get a proxy for the segmental durations by using Hubert tokens (with 100 clusters) and extracting their lengths (i.e.
 > how many of the same token occur in a row).
-> Finally, for the \textit{Speaker} factor, we use d-vectors \cite{wan2018dvec} and the more recent WeSpeaker \cite{wang2023wespeaker} representations.
+> Finally, for the Speaker factor, we use d-vectors \cite{wan2018dvec} and the more recent WeSpeaker \cite{wang2023wespeaker} representations.
 
 ### 3.2.Speech Distributions
 
@@ -167,14 +168,14 @@ None
 
 > In the one-dimensional case, \( W_2 \) can be computed as a function of the ordered samples \cite{kolouri2018sliced}: 
 
-\begin{equation}\label{eq:one}
+$$
 W_2( \hat{P}_1, \hat{P}_2 ) =
 \sqrt{
 \frac{1}{n}
 \sum_{i=1}^{n}
 \left( x_i - y_i \right)^2
 }
-\end{equation}
+$$
 
 > where \( \{ x_1, \ldots, x_n \} \) denote sorted samples of \( \hat{P}(X|D_1) \), and \( \{ y_1, \ldots, y_n \} \) denote sorted samples of \( \hat{P}(X|D_2) \) .
 
@@ -182,14 +183,15 @@ W_2( \hat{P}_1, \hat{P}_2 ) =
 
 > We can compute \( W_2 \) distance for two normally distributed multi-dimensional \( \hat{P_1} \) and \( \hat{P_2} \) using their mean vectors \( \mu_1 \) and \( \mu_2 \) and their covariance matrices \( \Sigma_1 \) and \( \Sigma_2 \) \cite{heusel2017fid}:
 
-
-\begin{equation}\label{eq:multi}
+$$
 W_2( \hat{P}_1, \hat{P}_2 ) =
 \sqrt{
-\norm{\mu_1-\mu_2}^2+D_{B}(\Sigma_1,\Sigma_2)
+\|\mu_1-\mu_2\|^2+D_{B}(\Sigma_1,\Sigma_2)
 }
-\end{equation}
-where \( D_B \) is the unnormalized Bures metric defined as
+$$
+
+> where \( D_B \) is the unnormalized Bures metric defined as
+
 \[
 D_B(\Sigma_1,\Sigma_2)=
 \text{trace} \left (
@@ -205,13 +207,15 @@ D_B(\Sigma_1,\Sigma_2)=
 > To evaluate how close a synthetic speech dataset \( D_{\text{syn}} \) is to real speech given a particular feature \( X \), we compute its Wasserstein distance \(W_2\) for real reference datasets \( \mathfrak{D}_{\text{real}} \) and distractor (noise) datasets \( \mathfrak{D}_{\text{noise}} \).
 > We find the smallest \( W_2 \) among the real and noise datasets respectively as
 
-\begin{equation*}
+$$
   \begin{split}
     W_{\text{real}} &= \min_{D_{\text{real}} \in \mathfrak{D}_{\text{real}}} W_2(\hat{P}_{\text{syn}}, \hat{P}_{\text{real}}) \\
     W_{\text{noise}} &= \min_{D_{\text{noise}} \in \mathfrak{D}_{\text{noise}}} W_2(\hat{P}_{\text{syn}}, \hat{P}_{\text{noise}})  
   \end{split}
-\end{equation*}
-We define the overall score (ranging from 0 to 100) as
+$$
+
+> We define the overall score (ranging from 0 to 100) as
+
 \[
 S=100\times \frac{
 W_{\text{real}}
@@ -241,9 +245,9 @@ W_{\text{real}}+W_{\text{noise}}
 > For distractor/noise datasets, we use the ESC dataset of background noises \cite{piczak2015esc}, as well as the following generated noise -- random uniform, random normal, all zeros and all ones.
 >
 > We compare our benchmark with two MOS prediction methods.
-> The first method is \textit{WVMOS}~\cite{andreev2022hifi}, which uses wav2vec 2.0 model~\cite{baevski2020wav2vec2} fine-tuned to predict MOS scores.
+> The first method is WVMOS ~\cite{andreev2022hifi}, which uses wav2vec 2.0 model~\cite{baevski2020wav2vec2} fine-tuned to predict MOS scores.
 > Its system-level correlation coefficients range from 0.68 to 0.96 for different corruptions of speech and their corresponding MOS scores~\cite{andreev2022hifi}.
-> The second method is \textit{UTMOS}~\cite{saeki2022utmos}, which is an ensemble MOS prediction system that won several categories in the 2022 VoiceMOS challenge \cite{huang2022voicemos}, and has since been used for evaluation of several leading TTS systems (**[XTTS (2024)](../Models/Speech_LLM/2024.06.07_XTTS.md)**; **[NaturalSpeech3 (2024)](../Models/Diffusion/2024.03.05_NaturalSpeech3.md)**).
+> The second method is UTMOS ~\cite{saeki2022utmos}, which is an ensemble MOS prediction system that won several categories in the 2022 VoiceMOS challenge \cite{huang2022voicemos}, and has since been used for evaluation of several leading TTS systems (**[XTTS (2024)](../Models/Speech_LLM/2024.06.07_XTTS.md)**; **[NaturalSpeech3 (2024)](../Models/Diffusion/2024.03.05_NaturalSpeech3.md)**).
 >
 > For all system\(\times\)feature combinations, we compute the score as described in Section~\ref{sec:overall}.
 > We average all features for each factor, which gives us the corresponding factor score.
@@ -285,7 +289,7 @@ W_{\text{real}}+W_{\text{noise}}
 >
 > The **Speaker score** also shows high correlation for Blizzard'08 and TTS Arena, but fails for BTTF.
 > We believe this is due to older unit-selection systems included in BTTF producing a natural speaker embedding for concatenated parts of real speech.
-> This effect is pronounced because we only achieve a significant TTSDS score correlation when the \textit{Speech} factor is excluded for BTTF.
+> This effect is pronounced because we only achieve a significant TTSDS score correlation when the Speech factor is excluded for BTTF.
 >
 > The **TTSDS score** achieves higher correlation than any single factor for all datasets included in our study, despite the low number of 80-100 samples per dataset.
 > One of the baseline MOS prediction networks still performed better for the early Blizzard'08 systems, but both MOS prediction networks were significantly outperformed by our benchmark for the more modern systems.
