--- a/Models/Diffusion/2024.06.17_DiTTo-TTS.md
+++ b/Models/Diffusion/2024.06.17_DiTTo-TTS.md
@@ -65,7 +65,7 @@
 > This efficiency is achieved through the reduction of input dimensionality using autoencoders, which also enables the diffusion models to focus on the most critical features of data ([LDM](../../Models/_Basis/2021.12.20_LDM.md)).
 > However, applying LDMs to text-to-speech (TTS) presents unique challenges because TTS requires precise alignment between text and generated speech over time.
 > Hence, their application to TTS often requires a complex pipeline, incorporating speech domain-specific modeling such as phoneme and duration ([Grad-TTS](../../Models/TTS2_Acoustic/2021.05.13_Grad-TTS.md), [NaturalSpeech2](../../Models/Diffusion/2023.04.18_NaturalSpeech2.md)).
-> Without these components, generation performance tends to be suboptimal ([Simple-TTS](../../Models/_tmp/Simple-TTS.md), [E3-TTS](../_tmp/2023.11.02_E3_TTS.md)), while their inclusion hinders the model efficiency and scalability.
+> Without these components, generation performance tends to be suboptimal ([Simple-TTS](../../Models/_tmp/Simple-TTS.md), [E3-TTS](2023.11.02_E3_TTS.md)), while their inclusion hinders the model efficiency and scalability.
 
 > In this work, we present a latent diffusion model for TTS that is integrated with off-the-shelf pre-trained text and speech encoders without relying on the speech domain-specific modeling.
 > Our method addresses the challenge of aligning text and speech solely through cross-attention mechanisms.
@@ -92,7 +92,7 @@
 > NaturalSpeech series ([NaturalSpeech2](../../Models/Diffusion/2023.04.18_NaturalSpeech2.md), [NaturalSpeech3](../../Models/Diffusion/2024.03.05_NaturalSpeech3.md)), building upon recent advances in the [Latent Diffusion Model (LDM)](../../Models/_Basis/2021.12.20_LDM.md), incorporate auxiliary modules for controllability of various speech attribute such as content, prosody, and timbre.
 > However, requiring supplementary data beyond speech-transcription pairs hinders scalability.
 > [Simple-TTS](../../Models/_tmp/Simple-TTS.md) simplifies the data preparation and training process by removing auxiliary modules and the need for phoneme-level durations.
-> Similarly, [E3-TTS](../_tmp/2023.11.02_E3_TTS.md) follows this approach but does not utilize a pre-trained latent autoencoder.
+> Similarly, [E3-TTS](2023.11.02_E3_TTS.md) follows this approach but does not utilize a pre-trained latent autoencoder.
 > However, both models have limitations in audio quality and impose a fixed length on the target audio, which is a significant constraint for speech generation.
 
 > ### Latent Diffusion Model (LDM) 
