--- a/Blogs/林唯秀/2024.05.27_一文教你看懂GPT-4o背后的语音技术.md
+++ b/Blogs/林唯秀/2024.05.27_一文教你看懂GPT-4o背后的语音技术.md
@@ -237,7 +237,7 @@ LLM 的指令微调同样可以迁移到语音-文本多模态领域中, LLM 的
 - SLM 在合成语音的过程中是否能够遵循多轮对话中的文本指令和语音指令? 这个很重要! 这允许模型根据用户的即时要求来生成语音回复. 比如说, OpenAI 演示视频中出现的：“将语速提高两倍”, “采用更加机械化的语气” 这样的要求.
 
 对于第一个问题, 以 [VALL-E](../../Models/Speech_LLM/2023.01.05_VALL-E.md) 为代表的诸多 zero-shot TTS 模型给出了不同的解决方案, 这些方案虽有不同, 但也有不可忽视的共同点; 
-对于第二个问题, 以 [VoiceLDM](../../Models/_tmp/VoiceLDM.md) 和 [ParlerTTS](../../Models/_tmp/2024.02.13_Parler-TTS.md) 为代表的 Text/Prompt-Guided Zero-Shot TTS 工作给出了肯定的答案.
+对于第二个问题, 以 [VoiceLDM](../../Models/Diffusion/2023.09.24_VoiceLDM.md) 和 [ParlerTTS](../../Models/_tmp/2024.02.13_Parler-TTS.md) 为代表的 Text/Prompt-Guided Zero-Shot TTS 工作给出了肯定的答案.
 
 简单解释一下 Text/Prompt-Guided Zero-Shot TTS 是怎么回事, 通常的语音合成就是将文本转换成声音, 该任务在 Transcription 之外, 又增加了 Description 的输入, 来描述合成语音的情感情绪, 口音, 语气, 语速, 音高, 说话环境, 氛围等等信息.
 我们逐个来看这些工作.
