--- a/Evaluations/2024.07.17_TTSDS.md
+++ b/Evaluations/2024.07.17_TTSDS.md
@@ -258,9 +258,10 @@ W_{\text{real}}+W_{\text{noise}}
 > The latest systems, which are most commonly based on discrete speech representations generatively modeled by LLM-like systems (**[VALL-E 2 (2024)](../Models/Speech_LLM/2024.06.08_VALL-E2.md)**), are represented by the TTS Arena leaderboard \cite{ttsarena}, which is a crowdsourced effort to evaluate these systems.
 > Only systems released in 2023 and 2024 are featured in this evaluation.
 > Since the data is not publicly released, we reproduce datasets for as many of the systems as possible.\footnote{We had to exclude MetaVoice and GPT-SoVITS due to reference audio length requirements; and MeloTTS due to only female voices being available.
-> This leaves us 9 out of the 12 publicly available systems.} As conditioning for the TTS systems, we use speaker reference waveforms from the LibriTTS \cite{zen2019libritts} test set, coupled with unrelated transcripts from the same set to make sure the data could not have been encountered during training.
+> This leaves us 9 out of the 12 publicly available systems.
+> As conditioning for the TTS systems, we use speaker reference waveforms from the LibriTTS test set, coupled with unrelated transcripts from the same set to make sure the data could not have been encountered during training.
 > 
-> Our reference speech datasets are LibriTTS \cite{zen2019libritts}, LibriTTS-R \cite{koizumi2023librittsr}, LJSpeech~\cite{ljspeech}, VCTK~\cite{vctk}, and the training sets for the Blizzard challenges \cite{le2022back,king2008blizzard}.
+> Our reference speech datasets are LibriTTS, LibriTTS-R, LJSpeech, VCTK, and the training sets for the Blizzard challenges \cite{le2022back,king2008blizzard}.
 > We sample 100 utterances at random from each dataset (if available, from their test sets).
 > For distractor/noise datasets, we use the ESC dataset of background noises \cite{piczak2015esc}, as well as the following generated noise -- random uniform, random normal, all zeros and all ones.
 >
