--- a/Models/TTS2_Acoustic/2020.05.22_Glow-TTS.md
+++ b/Models/TTS2_Acoustic/2020.05.22_Glow-TTS.md
@@ -44,7 +44,7 @@
 ## 1.Introduction
 
 > Text-to-speech (TTS) is a task in which speech is generated from text, and deep-learning-based TTS models have succeeded in producing natural speech.
-> Among neural TTS models, autoregressive models, such as [Tacotron 2](../../Models/TTS2_Acoustic/2017.12.16_Tacotron2.md) and [Transformer TTS](../../Models/TTS2_Acoustic/2018.09.19_Transformer_TTS.md), have shown state-of-the-art performance.
+> Among neural TTS models, autoregressive models, such as [Tacotron 2](../../Models/TTS2_Acoustic/2017.12.16_Tacotron2.md) and [Transformer TTS](2018.09.19_TransformerTTS.md), have shown state-of-the-art performance.
 > Despite the high synthesis quality of autoregressive TTS models, there are a few difficulties in deploying them directly in real-time services.
 > As the inference time of the models grows linearly with the output length, undesirable delay caused by generating long utterances can be propagated to the multiple pipelines of TTS systems without designing sophisticated frameworks [14].
 > In addition, most of the autoregressive models show a lack of robustness in some cases ([FastSpeech](../../Models/TTS2_Acoustic/2019.05.22_FastSpeech.md), [ParaNet](../../Models/TTS2_Acoustic/2019.05.21_ParaNet.md)).
@@ -79,7 +79,7 @@
 
 > ### Text-to-Speech Models. 
 > TTS models are a family of generative models that synthesize speech from text.
-> TTS models, such as [Tacotron 2](../../Models/TTS2_Acoustic/2017.12.16_Tacotron2.md), [DeepVoice3](../../Models/TTS2_Acoustic/2017.10.20_DeepVoice3.md) and [Transformer TTS](../../Models/TTS2_Acoustic/2018.09.19_Transformer_TTS.md), generate a mel-spectrogram from text, which is comparable to that of the human voice.
+> TTS models, such as [Tacotron 2](../../Models/TTS2_Acoustic/2017.12.16_Tacotron2.md), [DeepVoice3](../../Models/TTS2_Acoustic/2017.10.20_DeepVoice3.md) and [Transformer TTS](2018.09.19_TransformerTTS.md), generate a mel-spectrogram from text, which is comparable to that of the human voice.
 > Enhancing the expressiveness of TTS models has also been studied.
 > Auxiliary embedding methods have been proposed to generate diverse speech by controlling factors such as intonation and rhythm [[Tacotron](../../Models/TTS2_Acoustic/2017.03.29_Tacotron.md), 32], and some works have aimed at synthesizing speech in the voices of various speakers [9, [DeepVoice2](../../Models/TTS0_System/2017.05.24_DeepVoice2.md)].
 > Recently, several works have proposed methods to generate mel-spectrogram frames in parallel.
@@ -206,7 +206,7 @@ $$
 > A detailed description can be found in Appendix A.1.
 
 > #### Encoder and Duration Predictor. 
-> We follow the encoder structure of [Transformer TTS](../../Models/TTS2_Acoustic/2018.09.19_Transformer_TTS.md) with two slight modifications.
+> We follow the encoder structure of [Transformer TTS](2018.09.19_TransformerTTS.md) with two slight modifications.
 > We remove the positional encoding and add relative position representations [22] into the self-attention modules instead.
 > We also add a residual connection to the encoder pre-net.
 > To estimate the statistics of the prior distribution, we append a linear projection layer at the end of the encoder.
@@ -230,7 +230,7 @@ $$
 > We follow the configuration for the mel-spectrogram of [WaveGlow](../../Models/TTS3_Vocoder/2018.10.31_WaveGlow.md), and all the generated mel-spectrograms from both models are transformed to raw waveforms through the pre-trained vocoder, [WaveGlow](../../Models/TTS3_Vocoder/2018.10.31_WaveGlow.md).
 
 > During training, we simply set the standard deviation \sigma of the learnable prior to be a constant 1.
-> ***Glow-TTS*** was trained for 240K iterations using the [Adam optimizer](../_Basis/2014.12.22_Adam.md) with the Noam learning rate schedule ([Transformer](../_Transformer/2017.06.12_Transformer.md)).
+> ***Glow-TTS*** was trained for 240K iterations using the [Adam optimizer](../../Modules/Optim/2014.12.22_Adam.md) with the Noam learning rate schedule ([Transformer](../_Transformer/2017.06.12_Transformer.md)).
 > This required only 3 days with mixed precision training on two NVIDIA V100 GPUs.
 
 > To train muli-speaker ***Glow-TTS***, we add the speaker embedding and increase the hidden dimension.
