--- a/Models/Speech_LLM/2023.06.06_Mega-TTS.md
+++ b/Models/Speech_LLM/2023.06.06_Mega-TTS.md
@@ -41,7 +41,7 @@
 - 被引: 33
 - 数据:
   - 训练: [WeNetSpeech](../../Datasets/2021.10.07_WenetSpeech.md)
-  - 训练: [GigaSpeech](../../Datasets/GigaSpeech.md)
+  - 训练: [GigaSpeech](../../Datasets/2021.06.13_GigaSpeech.md)
   - 评估: [VCTK](../../Datasets/2012.08.00_VCTK.md)
   - 评估: [LibriSpeech](../../Datasets/2015.04.19_LibriSpeech.md)
   - 评估: [AISHELL-3](../../Datasets/AISHELL.md)
