--- a/Models/Speech_LLM/2023.05.16_SoundStorm.md
+++ b/Models/Speech_LLM/2023.05.16_SoundStorm.md
@@ -40,12 +40,18 @@
 
 ## Abstract·摘要
 
+<details>
+<summary>原文</summary>
+
 > We present ***SoundStorm***, a model for efficient, non-autoregressive audio generation.
 > ***SoundStorm*** receives as input the semantic tokens of [AudioLM (2022)](../../Models/Speech_LLM/2022.09.07_AudioLM.md), and relies on bidirectional attention and confidence-based parallel decoding to generate the tokens of a neural audio codec.
 > Compared to the autoregressive generation approach of [AudioLM (2022)](../../Models/Speech_LLM/2022.09.07_AudioLM.md), our model produces audio of the same quality and with higher consistency in voice and acoustic conditions, while being two orders of magnitude faster.
 > ***SoundStorm*** generates 30 seconds of audio in 0.5 seconds on a TPU-v4.
 > We demonstrate the ability of our model to scale audio generation to longer sequences by synthesizing high-quality, natural dialogue segments, given a transcript annotated with speaker turns and a short prompt with the speakers’ voices.
 > Audio samples are available at https://google-research.github.io/seanet/soundstorm/examples/
+
+</details>
+<br>
 
 我们提出了 ***SoundStorm***, 一个用于高效非自回归音频生成的模型.
 ***SoundStorm*** 以 AudioLM 的语义 token 作为输入, 并依赖于双向注意力和基于置信度的并行解码来生成神经音频编解码器的 token.
