--- a/Models/Flow/2022.10.06_Flow_Matching.md
+++ b/Models/Flow/2022.10.06_Flow_Matching.md
@@ -1,5 +1,38 @@
 # Flow Matching for Generative Modeling
 
+<details>
+<summary>基本信息</summary>
+
+- 标题:
+- 作者:
+  - ??
+- 机构:
+  - 机构 
+- 时间:
+  - 预印时间: 20??.??.?? ArXiv v1
+  - 更新笔记: 20??.??.??
+- 发表:
+  - 期刊/会议 
+- 链接:
+  - [ArXiv]()
+  - [DOI]()
+  - [Github]()
+  - [Demo]()
+  - [Scholar](https://scholar.google.com/scholar?cluster=)
+- 标签:
+  - ?
+- 页数: ?
+- 引用: ?
+- 被引: ?
+- 数据:
+  - ? 
+- 对比:
+  - ?
+- 复现:
+  - ?
+
+</details>
+
 ## 预备知识: 连续标准化流
 
 设 $\mathbb{R}^d$ 为数据空间, 数据点 $x=(x^1,\cdots,x^d)\in\mathbb{R}^d$.
@@ -225,3 +258,53 @@ $$
 $$
 
 因为 $\psi_t$ 是简单的可逆仿射映射, 所以可以使用上述的微分方程用于求解 $u_t$ 的解析形式.
+用 $f'$ 表示时间依赖函数 $f$ 关于时间的导数, 即 $f'=\dfrac{\text{d} f}{\text{d}t}$.
+
+**定理 3.** $p_t(x|x_1)$ 为高斯概率路径 $\mathcal{N}(x|\mu_t(x_1),\sigma_t(x_1)^2 I)$, 对应的流映射为 $\psi_t=\sigma_t(x_1) x +\mu_t(x_1)$. 存在唯一的矢量场能够定义这个流 $\psi_t$, 其形式为:
+$$
+    u_t(x|x_1) = \dfrac{\sigma'_t(x_1)}{\sigma_t(x_1)}(x-\mu_t(x_1)) + \mu'_t(x_1)
+$$
+
+$u_t(x|x_1)$ 生成高斯概率路径 $p_t(x|x_1)$.
+
+### 高斯条件概率路径的特殊情形
+
+我们的形式化对于任意的函数 $\mu_t(x_1)$ 和 $\sigma_t(x_1)$ 都适用, 我们可以将它们设置为任何满足期望边界条件的可微函数. 首先讨论一些特殊情形.
+
+#### 扩散条件矢量场
+
+扩散模型从数据点开始逐渐添加噪声直到它近似纯噪声. 这可以形式化为随机过程, 它有着严格的要求以获得在任意时间的封闭形式表示, 得到具有特定均值和标准差的高斯条件概率路径 $p_t(x|x_1)$.
+例如反向 (噪声到数据) Variance Exploding, VE 路径具有如下形式
+
+$$
+    p_t(x|x_1) = \mathcal{N}(x|x_1, \sigma_{1-t}^2 I)
+$$
+
+其中 $\sigma_t$ 是一个递增函数, 初值为 0, 终值远大于 1.
+那么上式提供了均值为 $\mu_t(x_1)=x_1$ 和 $\sigma_t(x_1)=\sigma_{1-t}$ 的选择.
+
+将这两个值代入到定理 3 的 $u_t$ 中, 得到
+
+$$
+    u_t(x|x_1) = -\dfrac{\sigma'_{1-t}}{\sigma_{1-t}} (x-x_1)
+$$
+
+反向 (噪声到数据) Variance Preserving, VP 扩散路径具有如下形式
+
+$$
+    p_t(x|x_1) = \mathcal{N}(x|\alpha_{1-t} x_1, (1-\alpha_{1-t}^2)I)
+$$
+
+其中 $\alpha_t = \exp(-\dfrac{1}{2}T(t))$, $T(t)=\int_0^t \beta(s)\text{d}s$, $\beta$ 是噪声缩放函数.
+
+那么上式提供了均值为 $\mu_t(x_1)=\alpha_{1-t}x_1$ 和 $\sigma_t(x_1)=\sqrt(1-\alpha_{1-t}^2)$.
+
+将这两个值代入到定理 3 的 $u_t$ 中, 得到
+
+$$
+    u_t(x|x_1) = -\dfrac{\alpha'_{1-t}}{1-\alpha_{1-t}^2} (\alpha_{1-t}x-x_1) = \dfrac{-T(1-t)}{2}\left[\dfrac{\exp(-T(1-t))x-\exp(-\dfrac{1}{2}T(1-t))x_1}{1-\exp(-T(1-t))}\right]  
+$$
+
+我们构造的条件矢量场 $u_t(x|x_1)$ 和之前在确定性概率流中使用的矢量场一致.
+但是将扩散条件矢量场和 Flow Matching 目标函数结合能提供更好的训练替代, 相比现有的分数匹配方法, 在实验中更稳定和稳健.
+
