--- a/Models/Speech_LLM/2024.02.12_BASE-TTS.md
+++ b/Models/Speech_LLM/2024.02.12_BASE-TTS.md
@@ -60,7 +60,32 @@
 
 ## 2.Related Works: 相关工作
 
-None
+### Text-to-Speech as Language Modeling
+
+> Casting TTS problem as next token prediction has gained popularity in recent years due to how easy it is to scale language models to large data and model sizes.
+>
+> The first model using this approach was TortoiseTTS \cite{tortoise} released in 2022. It combines a GPT2-style speechcode language model with a diffusion decoder and an off-the-shelf vocoder, achieving remarkable few-shot capability. VALL-E \cite{wang2023neural} followed a similar approach: the model is scaled to 60k hours of speech data and uses a pre-trained audio encoder EnCodec for speechcode extraction \cite{DBLP:journals/corr/abs-2210-13438}. 
+> VALL-EX \cite{VALLEX} replicated VALL-E with 70k hours, with an additional cross-lingual speech-to-speech translation task in English and Chinese by using target language token as prompt. VioLa \cite{wang2023viola} extended VALL-EX with both text-to-text translation and speech-to-text recognition tasks. SpeechX \cite{wang2023speechx} extended VALL-E by adding noise suppression, target speaker extraction, clean and noisy speech editing, and speech removal tasks.
+>
+> While VALL-EX, VioLA and SpeechX are versatile models reporting improved performance on word error rate and speaker similarity, no effects on core TTS aspects such as naturalness or prosody improvement were reported. VALL-E reported significant improvements over industry baselines, but we are unable to compare as the model is not publicly available. Here, we propose a multi-lingual and multi-speaker TTS leveraging 100K hours of data, with strong proven naturalness results in English and Spanish. Evaluations show improved speech naturalness compared to Tortoise-TTS. Qualitative linguistic analysis shows "emergent abilities" \cite{wei2022emergent} - BASE TTS can render complex prosody patterns, taking cues from texts without explicit labels for emotions.
+
+### Discrete Speech Representations
+
+> In audio generative AI, the first acoustic encoders used in GPT-TTS are VQ-VAE \cite{vqvae}, SoundStream \cite{zeghidour2021soundstream} and EnCodec \cite{DBLP:journals/corr/abs-2210-13438}, which are deep learning audio compression techniques producing discrete acoustic token based on vector quantization. These acoustic encoders are shown to be superior to Mel-spectrograms \cite{DBLP:journals/corr/abs-2309-10922, yang2023towards}, but ignore semantic information and are unnecessarily complex due to lack of disentanglement \cite{huang2023repcodec}. AudioLM \cite{borsos2023audiolm} combines SoundStream tokens with semantic BERT tokens \cite{chung2021w2v}. SpeechTokenizer \cite{zhang2023speechtokenizer} and RepCodec \cite{huang2023repcodec} aim to capture semantics by adding self-supervised embedding prediction-based losses \cite{mohamed2022self}. BASE TTS builds acoustic tokens by leveraging semantic information from self-supervised embeddings and disentangling speaker information from the acoustic tokens. Then, it applies byte-pair encoding on these tokens to reduce memory requirement, allowing the model to train on longer sequences.
+
+### LTTS Simplifies Modeling
+
+> Since Tacotron~2 \cite{tacotron2}, a successful TTS paradigm has been to separate speech creation into three sub-systems: (1) a Frontend responsible for text normalization, grapheme-to-phoneme conversion and  SSML tag handling e.g. to mark emphasis \cite{DBLP:journals/corr/abs-2307-07062}, (2) a Mel-spectrogram generator, inferring the amplitudes of the speech signal and responsible for the model expressivity, and (3) a dedicated Vocoder \cite{DBLP:conf/ssw/OordDZSVGKSK16, jiao2021universal}, generating the waveform by inferring the phase information. Expert knowledge can be induced to improve its performance such as using pre-computed features \cite{DBLP:conf/iclr/0006H0QZZL21}, coarse or fine-grained prosody information (\cite{Copycat}, and style control \cite{DBLP:conf/naacl/PrateekLBDLMRW19}. It has also proven successful with architectures such as Transformers \cite{li2019neural, DBLP:conf/iclr/0006H0QZZL21}, Flows \cite{kim2021conditional}, and Diffusion \cite{popov2021grad}.
+>
+> These systems require a complex pipeline. Any error made during an earlier stage is propagated to the next. BASE TTS and other LTTS models are breaking these limitations. We simplify the data preparation by requiring only a large amount of audio, where texts can be obtained from a speech-to-text system, and require no phoneme extraction. GPT-based architectures \cite{radford2019language} have flourished by enabling versatile prompt-based task formulation, integration of expert feedback \cite{ouyang2022training}, and use as a foundational model with quick fine-tuning  \cite{hu2022lora, fu2023effectiveness} e.g. on a specific task, a set of speakers or a new locale. BASE TTS shows that an end-to-end approach can achieve high expressivity on a few audio examples and in a multilingual setting, marking a high bar of quality in Spanish.
+
+### Contextual and Emotional TTS
+
+> This usually requires separate, dedicated TTS sub-systems. Multiple approaches rely on predicting prosody representations using contextualized word embeddings \cite{copycat2, xin2023improving, wu2022self, DBLP:journals/corr/abs-2309-01576}. While prosody predictors of these models usually generate appropriate prosody, they often ignore strong text cues that would force a dramatic change e.g. in emotions or speech cues like shouting or whispering. Context-aware emotional TTS systems \cite{pan2021chapter, liu2023emotion, emotts, mukherjee2022text, schnell2021improving} are even more limited. They usually favor a text-based emotion predictor coupled with an emotion controlable TTS system. These systems require high-quality recordings with a forced speaking style and annotated audio and text data, limiting their usefulness due to the sheer number of emotions expressible in human speech \cite{cambria2012hourglass}. BASE TTS benefits from being a language model which is both acoustic and semantically/syntactically aware. In this paper, we systemize an approach to produce and evaluate emergent contextual understanding of the text with a wide range of styles, without requiring supervised training or annotation.
+
+### BASE TTS has Data Efficiency Built-In
+
+> Low-resource TTS has focused on reducing the required amount of high quality training data through e.g. voice conversion \cite{huybrechts2021low}, data generation \cite{DBLP:conf/icassp/LajszczakPKBBJN22}, modeling techniques \cite{DBLP:journals/corr/abs-2307-07062}, or recording script optimizations \cite{shamsi2020tts}. This stems from the early difficulty of ingesting a high volume of data from multiple speakers in potentially different styles or languages. A step up in that direction is zero-shot inference such as in Bark \footnote{\url{https://github.com/suno-ai/bark}} and \cite{casanova2022yourtts, wu2022adaspeech}, which aim to clone a voice with only a few seconds of recordings. Due to leveraging a substantially larger dataset, a bigger model, and a dedicated speaker encoder, BASE TTS and the recent LTTS models set a new standard in data efficiency.
 
 ## 3.Methodology: 方法
 
